[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-ads-agent"
version = "2.0.0"
description = "Enterprise-grade AI Google Ads management agent powered by Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "It All Started With AI Idea", email = "john@itallstartedwithaidea.com"}]
keywords = ["google-ads", "ai", "agent", "claude", "anthropic", "advertising", "ppc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.43.0",
    "google-ads>=28.1.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "pydantic>=2.0.0"]
creative = ["cloudinary>=1.40.0"]
cli = ["rich>=13.7.0"]
all = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "pydantic>=2.0.0", "cloudinary>=1.40.0", "rich>=13.7.0"]

[project.scripts]
gads-agent = "scripts.cli:main"

[project.urls]
Homepage = "https://googleadsagent.ai"
Repository = "https://github.com/itallstartedwithaidea/google-ads-api-agent"
Issues = "https://github.com/itallstartedwithaidea/google-ads-api-agent/issues"
Documentation = "https://github.com/itallstartedwithaidea/google-ads-api-agent#readme"
